[gd_scene format=3 uid="uid://bxdc0v7vdckkj"]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1_6jbdy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6jbdy")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.054902, 0.0470588, 1)

[node name="TitleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameTitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "逆果溯因"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "REVERSE CAUSALITY"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "开始游戏"

[node name="ContinueButton" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "继续游戏"

[node name="ArchiveButton" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "因果图鉴"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -20.0
grow_vertical = 0
text = "v0.1.0"

[connection signal="pressed" from="MenuButtons/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuButtons/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MenuButtons/ArchiveButton" to="." method="_on_archive_pressed"]
